--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "fullscreen",
   "Scope": "/index.html",
-  "start_url": "/index.html",
+  "start_url": "https://jsotteccanic.github.io/entregAPP",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
