--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "fullscreen",
-  "Scope": "/index.html",
-  "start_url": "https://jsotteccanic.github.io/entregAPP",
+  "Scope": "./index.html",
+  "start_url": "./index.html",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
